--- a/fastscore/config/table_config.json
+++ b/fastscore/config/table_config.json
@@ -353,5 +353,5 @@
         "210": "League cup gives UEFA Europa Conference League.",
         "211": "League cup gives UEFA Europa Conference League qualification."
     },
-    "updatedTime": "Tue Oct 28 01:50:03 UTC 2025"
+    "updatedTime": "Tue Oct 28 23:57:14 ICT 2025"
 }
