--- a/fastscore/config/table_config.json
+++ b/fastscore/config/table_config.json
@@ -334,7 +334,7 @@
         },
         "1011": {
             "col": "0xB33C00",
-            "des": "Europa League"
+            "des": null
         },
         "1012": {
             "col": "0x23DF8C",
